# my-nixos-configuration

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  APPLICATION_DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_REVIEW_AND_NEXT_STEPS_v3.md  Justfile  README.md  flake.nix  keys.example.nix
.github/: dependabot.yml
.github/workflows/: check.yaml  provisioning-e2e.yaml  release-iso.yaml
application/: .env.example  README.md  compose.yaml
docs/: APPLICATION_OPERATIONS.md  BACKUP_AND_RESTORE.md  REPOSITORY_LAYOUT.md  SCRIPTS.md  SECRETS.md
modules/: application.nix  base.nix  docker.nix  networking.nix  observability.nix  security.nix  ssh.nix  users.nix
provisioning/: discover-hardware.sh  install.sh  select-disk.sh  verify-installed.sh
pxe/: README.md  build-pxe.sh  bundle.nix  dnsmasq.conf.example  ipxe-menu.ipxe
python/: README.md  pyproject.toml
python/src/mini_pc_provision/: __init__.py  cli.py  deployment.py  discovery.py  disks.py  errors.py  installer.py  keys.py  models.py  network.py  orchestrator.py  process.py  remote.py  secrets.py  session.py
python/tests/: conftest.py  test_cli.py  test_deployment.py  test_disks.py  test_installer.py  test_keys.py  test_models.py  test_network.py  test_process_remote.py  test_secrets.py  test_session_orchestrator.py
rescue/: iso.nix  motd.nix  networking.nix  pxe.nix  ssh.nix  system.nix
scripts/: build-iso.sh  check.sh  create-secrets-file.sh  inspect-iso.sh  run-rescue-vm.sh  write-usb.sh
tests/: disk-layout.nix  repository.sh  rescue.nix  secrets.sh  selector.sh  services.nix
(+16 files in other folders)
